--- a/Paginas/INICIARSESION.html
+++ b/Paginas/INICIARSESION.html
@@ -47,7 +47,7 @@
                     }
                   </style>
                   
-                  <img class="img-fluid centrar-imagen" src="C:/Users/karol/Documents/CUN/8stre/ingWeb/PaginaWeb/imagen/INICIARSESION.jpeg" alt="Iniciar sesión" />
+                  <img class="img-fluid centrar-imagen" src="https://marentes25.github.io/vidasaludable/imagen/INICIARSESION.jpeg" alt="Iniciar sesión" />
                   
                 <!-- Icon Divider-->
                 <div class="divider-custom">
